<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_combination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combination_1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_food1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_1" />

        <TextView
            android:id="@+id/tv_food2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_2" />

        <TextView
            android:id="@+id/tv_food3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_3" />

    </LinearLayout>

</androidx.cardview.widget.CardView>